java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testIncorrectType58119b-hints.pass
Create Field d in org.netbeans.test.java.hints.IncorrectType58119b
Create Parameter d
Create Local Variable d
